--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: country_list_picker
-description: A new Flutter package project.
+description: Flutter plugin project to pick country code, will show code country, dial code, flag country, and name country.
 version: 0.0.1
-homepage:
+homepage: https://github.com/AmremadDev/country-list-picker.git
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
