--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: country_list_picker
 description: Flutter plugin project to pick country code, will show code country, dial code, flag country, and name country.
-version: 0.0.1
+version: 0.0.0
 homepage: https://github.com/AmremadDev/country-list-picker.git
-publish_to: none
+# publish_to: none
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
