--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  mask_text_input_formatter: ^2.4.0
+  mask: ^1.0.4
+  flutter_libphonenumber: ^1.3.0
 
 dev_dependencies:
   flutter_test:
