--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   http: ^0.13.5
+  mask_text_input_formatter: ^2.4.0
   provider: ^6.0.4
 
 dev_dependencies:
