--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   mask: ^1.0.4
   flutter_libphonenumber: ^1.3.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +85,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Quicksand
+      fonts:
+        - asset: fonts/Quicksand-Bold.ttf
+        - asset: fonts/Quicksand-Light.ttf
+        - asset: fonts/Quicksand-Medium.ttf
+        - asset: fonts/Quicksand-Regular.ttf     
+        - asset: fonts/Quicksand-SemiBold.ttf
+
   # fonts:
   #   - family: Schyler
   #     fonts:
