--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mask: ^1.0.4
   flutter_libphonenumber: ^1.3.0
   provider: ^6.0.5
+  flex_color_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
