--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_libphonenumber: ^1.3.0
   provider: ^6.0.5
   flex_color_picker: ^3.0.0
+  accordion: ^2.5.1
 
 dev_dependencies:
   flutter_test:
