--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_lints: ^2.0.1
+  mask_text_input_formatter: ^2.4.0
   provider: ^6.0.4
 
 dev_dependencies:
