--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,6 @@
 name: country_list_picker
-description: CountryListPicker is a customizable country picker for Flutter. 
-             The CountryListPicker can be show in many different languages. 
-             The sizes and styles used for the picker items can be customized.
-version: 0.0.1
+description: CountryListPicker for Flutter customizable country selection package with multilingual support.
+version: 1.0.0
 homepage: https://github.com/AmremadDev/country-list-picker.git
 # publish_to: none
 
