--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: country_list_picker
-description: CountryListPicker for Flutter customizable country selection package with multilingual support.
-version: 1.0.0
+description: CountryListPicker for Flutter customizable country selection package with multi-languages support.
+version: 1.0.1
 homepage: https://github.com/AmremadDev/country-list-picker.git
 # publish_to: none
 
