--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   dart_code_viewer2: ^1.0.0
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
